<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_dark"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="104dp"
        android:background="@color/text_color_primary"
        android:padding="10dp"
        android:src="@drawable/ativo_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="wrap_content"
        android:ems="13"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:background="@color/text_color_primary"
        android:hint="@string/digite_seu_nome"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/text_color_secundary"
        android:textColor="@color/color_primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

    <EditText
        android:id="@+id/editTextAltura"
        android:layout_width="wrap_content"
        android:ems="13"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/text_color_primary"
        android:hint="@string/digite_sua_altura"
        android:textColorHint="@color/text_color_secundary"
        android:textColor="@color/color_primary_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

    <EditText
        android:id="@+id/editTextPeso"
        android:layout_width="wrap_content"
        android:ems="13"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/text_color_primary"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:hint="@string/digite_seu_peso"
        android:textColorHint="@color/text_color_secundary"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/color_primary_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAltura" />


    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/calcular"
        android:textColor="@color/color_primary_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPeso" />


</androidx.constraintlayout.widget.ConstraintLayout>